
# Sources of non-templated classes.
FILE(GLOB OTBApplicationEngine_SRCS "*.cxx" )

IF (WIN32)
  SET(CMAKE_C_FLAGS   "/bigobj ${CMAKE_CXX_FLAGS}")
  SET(CMAKE_CXX_FLAGS "/bigobj ${CMAKE_CXX_FLAGS}")
ENDIF(WIN32)

ADD_LIBRARY(OTBApplicationEngine ${OTBApplicationEngine_SRCS})
TARGET_LINK_LIBRARIES (OTBApplicationEngine OTBCommon OTBIO)

IF(OTB_LIBRARY_PROPERTIES)
  SET_TARGET_PROPERTIES(OTBApplicationEngine PROPERTIES ${OTB_LIBRARY_PROPERTIES})
ENDIF(OTB_LIBRARY_PROPERTIES)

IF(NOT OTB_INSTALL_NO_LIBRARIES)
  INSTALL(TARGETS OTBApplicationEngine
    RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR} COMPONENT RuntimeLibraries
    LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT RuntimeLibraries
    ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT Development)
ENDIF(NOT OTB_INSTALL_NO_LIBRARIES)

IF(NOT OTB_INSTALL_NO_DEVELOPMENT)
  FILE(GLOB __files1 "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
  FILE(GLOB __files2 "${CMAKE_CURRENT_SOURCE_DIR}/*.txx")
  INSTALL(FILES ${__files1} ${__files2}
    DESTINATION ${OTB_INSTALL_INCLUDE_DIR}/ApplicationEngine
    COMPONENT Development)
ENDIF(NOT OTB_INSTALL_NO_DEVELOPMENT)
 