
# Sources of non-templated classes.
FILE(GLOB OTBContrastEnhancementFilters_SRCS "*.cxx" )

ADD_LIBRARY(OTBContrastEnhancementFilters ${OTBContrastEnhancementFilters_SRCS})
TARGET_LINK_LIBRARIES (OTBContrastEnhancementFilters OTBCommon ITKBasicFilters)

IF(OTB_LIBRARY_PROPERTIES)
  SET_TARGET_PROPERTIES(OTBContrastEnhancementFilters PROPERTIES ${OTB_LIBRARY_PROPERTIES})
ENDIF(OTB_LIBRARY_PROPERTIES)

IF(NOT OTB_INSTALL_NO_LIBRARIES)
  INSTALL(TARGETS OTBContrastEnhancementFilters
    RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR} COMPONENT RuntimeLibraries
    LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT RuntimeLibraries
    ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT Development)
ENDIF(NOT OTB_INSTALL_NO_LIBRARIES)

IF(NOT OTB_INSTALL_NO_DEVELOPMENT)
  FILE(GLOB __files1 "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
  FILE(GLOB __files2 "${CMAKE_CURRENT_SOURCE_DIR}/*.txx")
  INSTALL(FILES ${__files1} ${__files2}
    DESTINATION ${OTB_INSTALL_INCLUDE_DIR}/ContrastEnhancement
    COMPONENT Development)
ENDIF(NOT OTB_INSTALL_NO_DEVELOPMENT)
