# Sources of non-templated classes.

FILE(GLOB OTBDisparityMap_SRCS "*.cxx" )

ADD_LIBRARY(OTBDisparityMap ${OTBDisparityMap_SRCS})
TARGET_LINK_LIBRARIES (OTBDisparityMap OTBCommon itkvnl)

INSTALL(TARGETS OTBDisparityMap
RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR} COMPONENT RuntimeLibraries
LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT RuntimeLibraries
ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT Development)

FILE(GLOB __files1 "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
FILE(GLOB __files2 "${CMAKE_CURRENT_SOURCE_DIR}/*.txx")

INSTALL(FILES ${__files1} ${__files2}
    DESTINATION ${OTB_INSTALL_INCLUDE_DIR}/DisparityMap
    COMPONENT Development)
